--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,43 +4,44 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:srcCompat="@drawable/background"
-        android:scaleType="centerCrop"/>
+        android:scaleType="centerCrop"
+        app:srcCompat="@drawable/background" />
 
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="try to fly!"
-        android:textColor="#03A9F4"
-        android:textSize="48sp"
         android:layout_above="@id/textPlay"
         android:layout_below="@id/textScore"
-        android:layout_centerHorizontal="true"/>
+        android:layout_centerHorizontal="true"
+        android:text="try to fly!"
+        android:textColor="#03A9F4"
+        android:textSize="48sp" />
 
     <TextView
         android:id="@+id/textPlay"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Play"
-        android:textSize="65sp"
         android:layout_centerInParent="true"
-        android:textColor="#000000"/>
+        android:text="Play"
+        android:textColor="#000000"
+        android:textSize="65sp" />
 
     <TextView
         android:id="@+id/textScore"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_margin="16dp"
         android:text="High Score"
         android:textSize="24sp"
-        android:layout_margin="16dp"
-        android:layout_alignParentRight="true"
 
         />
 
